manifests/deployment-blue.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __APP_NAME__
      version: blue
  template:
    metadata:
      labels:
        app: __APP_NAME__
        version: blue
    spec:
      containers:
      - name: app
        image: __APP_NAME__:blue
        ports:
        - containerPort: __DOCKER_PORT__
