manifests/deployment-green.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __APP_NAME__
      version: green
  template:
    metadata:
      labels:
        app: __APP_NAME__
        version: green
    spec:
      containers:
      - name: __APP_NAME__
        image: __APP_NAME__:green
        ports:
        - containerPort: __DOCKER_PORT__
