manifests/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__-service
spec:
  type: NodePort
  selector:
    app: __APP_NAME__
    version: blue # Awalnya mengarah ke blue, akan di-patch oleh deploy.sh
  ports:
    - protocol: TCP
      port: 80
      targetPort: __TARGET_PORT__
      nodePort: __NODE_PORT__ # Anda mungkin ingin membuat nodePort ini juga dinamis atau menghapusnya jika tidak diperlukan
