manifests/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - __DOMAIN__
      secretName: __TLS_SECRET__
  rules:
    - host: __DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __APP_NAME__-service
                port:
                  number: __SERVICE_PORT__
